# rust_auth0

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
